--- a/GastosPersonales/Shared/NavMenu.razor
+++ b/GastosPersonales/Shared/NavMenu.razor
@@ -1,64 +1,49 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">GastosPersonales</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="">Gastos Personales</a>
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="nav-scrollable">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
+
+        <!-- Mantenimientos -->
+        <div class="nav-section-title px-3 mt-3">Mantenimientos</div>
+        <div class="nav-item px-4">
             <NavLink class="nav-link" href="tiposgasto">
                 <span class="oi oi-dollar" aria-hidden="true"></span> Tipos de Gasto
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="fondosmonetarios">
-                <span class="oi oi-wallet" aria-hidden="true"></span> Fondos Monetarios
+                <span class="oi oi-dollar" aria-hidden="true"></span> Fondo Monetario
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+
+        <!-- Movimientos -->
+        <div class="nav-section-title px-3 mt-3">Movimientos</div>
+        <br />
+        <div class="nav-item px-4">
             <NavLink class="nav-link" href="presupuestos">
-                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Presupuestos
+                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Presupuesto por gasto
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="registro-gastos">
-                <span class="oi oi-credit-card" aria-hidden="true"></span> Registro de Gastos
+                <span class="oi oi-credit-card" aria-hidden="true"></span> Registro de gastos
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="depositos">
                 <span class="oi oi-arrow-thick-top" aria-hidden="true"></span> Depósitos
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+
+        <!-- Consultas y Reportes -->
+        <div class="nav-section-title px-3 mt-3">Consultas y Reportes</div>
+        <div class="nav-item px-4">
             <NavLink class="nav-link" href="consulta-movimientos">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta de Movimientos
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Movimientos
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
+            <br />
             <NavLink class="nav-link" href="grafico-presupuesto">
-                <span class="oi oi-bar-chart" aria-hidden="true"></span> Gráfico Comparativo
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Gráfico comparativo
             </NavLink>
         </div>
+
     </nav>
 </div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
