--- a/GastosPersonales/Pages/_Host.cshtml
+++ b/GastosPersonales/Pages/_Host.cshtml
@@ -1,18 +1,27 @@
 ﻿@page "/"
-@using Microsoft.AspNetCore.Components.Web
 @namespace GastosPersonales.Pages
+@using Microsoft.AspNetCore.Components.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+
+    <!-- Bootstrap base CSS -->
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Sitio y estilos del proyecto -->
     <link href="css/site.css" rel="stylesheet" />
     <link href="GastosPersonales.styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="favicon.png"/>
+
+    <!-- Blazorise CSS -->
+    <link href="_content/Blazorise.Bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Icons.FontAwesome/fontawesome.min.css" rel="stylesheet" />
+
+    <link rel="icon" type="image/png" href="favicon.png" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -29,6 +38,62 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <!-- Chart.js (requerido por Blazorise Charts, no incluido por defecto) -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+
+    <!-- Blazorise JavaScript -->
+    <script src="_content/Blazorise/bootstrap.bundle.min.js"></script>
+    <script src="_content/Blazorise.Charts/charts.bundle.min.js"></script>
+    <script src="_content/Blazorise.Charts/charts.js"></script>
+
+    <!-- Blazor Server runtime -->
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
+@* @page "/"
+@using Microsoft.AspNetCore.Components.Web
+@namespace GastosPersonales.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="~/" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="css/site.css" rel="stylesheet" />
+    <link href="GastosPersonales.styles.css" rel="stylesheet" />
+
+    <!-- Blazorise Bootstrap CSS -->
+    <link href="_content/Blazorise.Bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <!-- FontAwesome Icons CSS -->
+    <link href="_content/Blazorise.Icons.FontAwesome/fontawesome.min.css" rel="stylesheet" />
+
+    <link rel="icon" type="image/png" href="favicon.png"/>
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+ 
+</head>
+<body>
+    <component type="typeof(App)" render-mode="ServerPrerendered" />
+
+    <div id="blazor-error-ui">
+        <environment include="Staging,Production">
+            An error has occurred. This application may no longer respond until reloaded.
+        </environment>
+        <environment include="Development">
+            An unhandled exception has occurred. See browser dev tools for details.
+        </environment>
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
+
+    <!-- Blazorise JS dependencies -->
+    <script src="_content/Blazorise/bootstrap.bundle.min.js"></script>
+    <script src="_content/Blazorise.Charts/charts.bundle.min.js"></script>
+    <script src="_content/Blazorise.Charts/charts.js"></script>
+
+    <script src="_framework/blazor.server.js"></script>
+</body>
+</html>
+ *@
